# pea-etf-tracker

./: .gitignore  AI_CODING_RULES.md  PROJECT_PLAN.md  Product Requirements Document.md  README.md  main.py  pyproject.toml  requirements.txt
analytics/: __init__.py  performance.py
config/: __init__.py  settings.py
data/: __init__.py  market_data.py  portfolio.py
docs/: CHANGELOG.md  USER_GUIDE.md  UX_TESTING_PLAN.md
packaging/: README_PACKAGING.md
sample_data/: comprehensive_portfolio.csv  demo_config.json  demo_portfolio.csv  sample_etfs.json  test.json  test_portfolio_for philippe.json  tutorial_portfolio.csv
tests/: __init__.py  test_charts.py  test_integration.py  test_manual_price_dialog.py  test_market_data.py  test_performance.py  test_portfolio.py  test_settings.py
ui/: __init__.py  chart_widget.py  dashboard.py  main_window.py  manual_price_dialog.py  portfolio_table.py  position_dialog.py  settings_dialog.py
visuals/: __init__.py  charts.py
